# DBHarness

./: .gitignore  compose.yml
.serena/: project.yml
dataset/: generate.py  tweet_pool.json
harness/: jac_login.py  mint_tokens.py  oracle.py  plot.py  pyproject.toml  run.py  seed_jac.py  tokens.neo4j.json  tokens.postgres.json
harness/plots/: plot.py  plot_ladder.py
harness/results/csv/: jac_feed_armA.csv  jac_feed_projection_armB.csv  jac_feed_projection_armB_retest.csv  jac_profile_armA.csv  jac_profile_projection_armB.csv  neo4j_created_at_string_quiet.csv  neo4j_profile_quiet.csv  pg_sqla_feed_quiet.csv
harness/scripts/: 10-dbs.sh  20-servers.sh  30-seed.sh  40-tokens.sh  50-oracle.sh  60-bench.sh  65-bench-plot.sh  70-plot.sh  all.sh  lib.sh
harness/tokens/: jids.jaseci.json  tokens.jaseci.json  tokens.neo4j.json  tokens.postgres.json
harness/tokens-kv/: tokens.jaseci.json
harness/tokens-mongo/: tokens.jaseci.json
harness/tokens-rel/: jids.jaseci.json  tokens.jaseci.json  tokens.neo4j.json  tokens.postgres.json
littleXs/jaseci/: app.jac  import_data.jac  jac.toml  main.jac  probe_sv.jac
littleXs/jaseci-rel/: app.jac  jac.toml  main.jac  probe.jac  probe_sv.jac
littleXs/neo4j/: app.py  loader.py  pyproject.toml
littleXs/postgres/: app.py  loader.py  pyproject.toml  smoke.sql
littleXs/sqlalchemy/: app.py  loader.py  pyproject.toml
results/: interactive.html
results/profiles/quiet-2026-07-17/: jac_R0_feed_dumps.txt  jac_R0_profile_dumps.txt  jac_R1_feed_dumps.txt  jac_R1_profile_dumps.txt  jac_R2_feed_dumps.txt  jac_R2_profile_dumps.txt  (+9 more)
(+19 files in other folders)
