[project]
name = "harness"
version = "0.1.0"
description = "Offline JWT mint for the LittleX DB benchmark"
requires-python = ">=3.13"
dependencies = [
    "pyjwt>=2.10,<2.11",
    "psycopg[binary]>=3.2",
    "neo4j>=5",
    "httpx>=0.27",
    "matplotlib>=3.11.0",
]
[tool.pyright]
venvPath = "."
venv = ".venv"
