[project]
name = "postgres"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "uvicorn[standard]>=0.49.0",
]
[tool.pyright]
venvPath = "."
venv = ".venv"
[tool.ruff.lint]
